2010-09-04  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* pop3.el (pop3-display-message-size-flag): Removed -- everybody wants
	message sizes.

	* gnus-agent.el (gnus-agent-load-local): Only read the agent.lib/local
	file once per `g' run.

	* nnmh.el (nnmh-request-list-1): Output active lines also for empty
	directories.  This makes the draft queue directory work.

	* gnus-start.el (gnus-get-unread-articles): Rewrite the way we request
	data from the backends, so that we only request the list of groups from
	each method once.  This should speed things up considerably.

	* nnvirtual.el (nnvirtual-request-list): Remove function so that we can
	detect that it's not implemented.

	* nnmh.el (nnmh-request-list-1): Fix up the recursion behavior so that
	we actually do recurse down into the tree, but don't stat all leaf
	nodes.

	* gnus-html.el (gnus-html-show-images): If there are no images to show,
	then say so instead of bugging out.

	* gnus-agent.el (gnus-agent-load-alist): Check whether the agentview
	files exist before trying to read them.

	* gnus-html.el (gnus-html-wash-tags): Remove even more white space
	around <pre_int>.

	* gnus-art.el (gnus-article-copy-string): Say what data we copied.

	* nnmh.el (nnmh-request-list-1): Optimize for speed.

2010-09-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mm-util.el (mm-image-load-path): Just return the image directories,
	not all directories in the path in addition to the image directories.
	(mm-image-load-path): Maintain a cache of the image directories so that
	the `g' command in Gnus doesn't have to stat dozens of directories each
	time.

	* gnus-html.el (gnus-html-put-image): Allow images to be removed.
	(gnus-html-wash-tags): Add a new `i' command to insert images.
	(gnus-html-insert-image): New command and keystroke.
	(gnus-html-redisplay-with-images): New command and keystroke.
	(gnus-html-show-images): Renamed command.
	(gnus-html-wash-tags): Remove more white space before <pre_int> image
	spacers.