@@ -2,6 +2,8 @@
 
 	* pop3.el (pop3-display-message-size-flag): Removed -- everybody wants
 	message sizes.
+	(pop3-movemail): Use erase-buffer instead of looping and deleting
+	regions, which seems rather odd.
 
 	* gnus-agent.el (gnus-agent-load-local): Only read the agent.lib/local
 	file once per `g' run.
